[gd_scene load_steps=3 format=2]

[ext_resource path="res://audio/AudioPlayer.gd" type="Script" id=1]
[ext_resource path="res://audio/pyoko_titlescreen.ogg" type="AudioStream" id=2]

[node name="AudioPlayer" type="Node2D"]
script = ExtResource( 1 )

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -80.0

[node name="TweenOut" type="Tween" parent="MusicPlayer"]

[node name="TweenIn" type="Tween" parent="MusicPlayer"]

[node name="SFXPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -10.0
[connection signal="ready" from="MusicPlayer" to="." method="_on_MusicPlayer_ready"]
[connection signal="tween_completed" from="MusicPlayer/TweenOut" to="." method="_on_TweenOut_tween_completed"]
